Update: Integrate NLP-based resume analysis, Celery async processing, guest mode flow, live dashboard updates and production-ready UI

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ django-celery-results==2.5.1
 # File handling & security
 python-magic==0.4.27
 scikit-learn
+sentence-transformers
+nltk
+pdfplumber
