--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,90 @@
-Django==4.2.11
-djangorestframework==3.16.1
-python-dotenv==1.0.1
-
-# AI
-google-generativeai==0.4.1
-
-# PDF Parsing
-pdfminer.six==20231228
-
-# Async background jobs
+amqp==5.3.1
+annotated-types==0.7.0
+asgiref==3.11.0
+billiard==4.2.4
+cachetools==6.2.4
 celery==5.3.6
-redis==5.0.3
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cryptography==46.0.3
+dj-database-url==3.0.1
+Django==4.2.11
 django-celery-results==2.5.1
-
-# File handling & security
+djangorestframework==3.16.1
+exceptiongroup==1.3.1
+filelock==3.20.1
+fsspec==2025.12.0
+google-ai-generativelanguage==0.4.0
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.45.0
+google-auth-httplib2==0.3.0
+google-generativeai==0.4.1
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.62.3
+gunicorn==23.0.0
+httplib2==0.31.0
+huggingface-hub==0.36.0
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+kombu==5.6.1
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.6.1
+nltk==3.9.2
+numpy==2.4.0
+packaging==25.0
+pdf2image==1.17.0
+pdfminer.six==20251107
+pdfplumber==0.11.8
+pillow==12.0.0
+prompt_toolkit==3.0.52
+proto-plus==1.27.0
+protobuf==4.25.8
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyparsing==3.3.1
+pypdfium2==5.2.0
+pytailwindcss==0.3.0
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-magic==0.4.27
-scikit-learn
-sentence-transformers
-nltk
-pdfplumber
+PyYAML==6.0.3
+redis==5.0.3
+regex==2025.11.3
+requests==2.32.5
+rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.16.3
+sentence-transformers==5.2.0
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.5
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.9.1
+tqdm==4.67.1
+transformers==4.57.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+uritemplate==4.2.0
+urllib3==2.6.2
+vine==5.1.0
+wcwidth==0.2.14
+whitenoise==6.11.0
