--- a/requirements.txt
+++ b/requirements.txt
@@ -20,18 +20,17 @@ djangorestframework==3.16.1
 exceptiongroup==1.3.1
 filelock==3.20.1
 fsspec==2025.12.0
-google-ai-generativelanguage==0.4.0
 google-api-core==2.28.1
 google-api-python-client==2.187.0
 google-auth==2.45.0
 google-auth-httplib2==0.3.0
-google-generativeai==0.4.1
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
 grpcio-status==1.62.3
 gunicorn==23.0.0
 httplib2==0.31.0
 huggingface-hub==0.36.0
+pymupdf
 idna==3.11
 Jinja2==3.1.6
 joblib==1.5.3
