--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ kombu==5.6.1
 MarkupSafe==3.0.3
 mpmath==1.3.0
 networkx==3.6.1
-nltk==3.9.2cls
+nltk==3.9.2
 numpy==2.4.0
 packaging==25.0
 pdf2image==1.17.0
